--- a/informacion.html
+++ b/informacion.html
@@ -82,11 +82,11 @@
                 </div>
             </div>
             <div class="rela-block content-container">
-                <h2>Links</h2>
+                <h2>Encuentra más información en los siguientes links</h2>
                 <div class="tab long">
                     <!-- 1Div -->
                     <h3 style="color: black;
-                               text-align: justify;">Encuentra más informacion en los siguientes links</h3>
+                               text-align: justify;">Links</h3>
 
                     <p  style="color: black;text-align: justify;">
                         Basta M., Pandya A., Genética, herencia ligada al cromosoma X. StatPearls [Internet].2020. Disponible en: </p>
