--- a/simbologia.html
+++ b/simbologia.html
@@ -24,9 +24,11 @@
 
 <body>
     <div  class="portada" id="porta">
-        <img src="images/portada.jpg" class="port">
+        <img src="images/portada.png" class="port">
         <br>
-        <button onclick="empezar()" class="port">¡EMPEZAR!</button>
+        <button onclick="empezar()" class="port" style="
+        width: 150px;
+    ">¡EMPEZAR!</button>
         <script>
             function  empezar(){
                 document.getElementById("porta").remove();
