--- a/heredograma.html
+++ b/heredograma.html
@@ -254,7 +254,7 @@
                                         <td> <input id="nombreP" type="text" style="width: 100px; height: 30px;" placeholder="Nombre">
                                             
                                         <td> <input id="numeroP" type="text" style="width: 50px; height: 30px; margin-left: 10px;" placeholder="#">
-                                            <input type="button" value="OK" onclick="numero()"></td>
+                                        <input type="button" value="OK" onclick="numero()" style="width: 50px;height: 30px; display: inherit;"></td>
                                     </tr>
                                 </table>                               
                             </form>
