--- a/simbologia.html
+++ b/simbologia.html
@@ -24,7 +24,7 @@
 
 <body>
     <div  class="portada" id="porta">
-        <img src="images/portada.png" class="port">
+        <img src="images/portada.jpg" class="port">
         <br>
         <button onclick="empezar()" class="port" style="
         width: 150px;
