--- a/ejercicios.html
+++ b/ejercicios.html
@@ -325,7 +325,7 @@
                 <form>                           
                     <label>Fenotipo:</label>
                     <select id="R3C">
-                    <option value="eje1RA">¼ de los hijos  tendrán ojos azules y 75% de los hijos tendrán ojos negros.</option>
+                    <option value="eje1RA">¼ de los hijos  tendrán ojos azules y 3/4 de los hijos tendrán ojos negros.</option>
                     <option value="eje1RB">100% tendrán ojos negros.</option>
                     <option value="eje1RC">2/4 de los hijos tendrán ojos negros y 2/4 ojos azules.</option>
                     <option value="eje1RC">50% hijas serán portadoras y 50% de los hijos serán portadores.</option>
