--- a/simbologia.html
+++ b/simbologia.html
@@ -170,6 +170,13 @@
                     </div>
                     <div class="rela-inline tabla">
                         <div class="abs-center">
+                            <img src="images/enfermedadCY.png" class="pic">
+                            <p></p>
+                            <p class="light">Enfermedad ligada al cromosoma X</p>
+                        </div>
+                    </div>
+                    <div class="rela-inline tabla">
+                        <div class="abs-center">
                             <img src="images/propositum.png" class="pic">
                             <p></p>
                             <p class="light">Propositum</p>
