--- a/heredograma.html
+++ b/heredograma.html
@@ -243,6 +243,10 @@
                                 <TD> <img src="images/generoDesc.png"
                                     id="img21" onclick="Click(event)"></TD>
                                 </TR>
+                                <tr>
+                                    <TD> <img src="images/enfermedadCY.png"
+                                        id="img30" onclick="Click(event)"></TD>
+                                </tr>
                             </TABLE>
                         </div>
                         <hr>
