--- a/ejercicios.html
+++ b/ejercicios.html
@@ -85,7 +85,7 @@
          
         <!-- 1er ejercicio -->
         <div class="tab long">
-            <h3 style="color: black;">HERENCIA RECESIVA LIGADA AL SEXO DEL CROMOSOMA X</h3>
+            <h3 style="color: black;">HERENCIA LIGADA AL SEXO DEL CROMOSOMA X</h3>
             <p>Un gen recesivo ligado al cromosoma X determina la hemofilia (<sub>h</sub>) en la especie humana. Una mujer portadora de hemofilia se empareja con un hombre no hemofílico. ¿Cuál es la probabilidad de que tengan un hijo varón hemofílico?</p>
             <hr>
             <div>
@@ -407,7 +407,7 @@
 
         <!-- 4to ejercicio -->
         <div class="tab long">
-            <h3 style="color: black;">HERENCIA RECESIVA LIGADA AL SEXO DEL CROMOSOMA X</h3>
+            <h3 style="color: black;">HERENCIA LIGADA AL SEXO DEL CROMOSOMA X</h3>
             <p>El daltonismo está determinado por un gen recesivo (<sub>d</sub>) ligado al cromosoma X. ¿Cuál sería el porcentaje del  fenotipo de los descendientes de un hombre daltónico y una mujer normal?</p>
             <hr>     
             <div>
