--- a/heredograma.html
+++ b/heredograma.html
@@ -304,7 +304,7 @@
                                 
                         </div>   
 					</div >
-                    <div   style="    float: left;       width: 44px;
+                    <div   style="    float: left;       width: 44px;     border-radius: 10px;
                                       height: 602px;     margin-left: 19px;
                                       margin-top: 10px;  background-color: #ffe007;">                    
                         <p style="    margin: 65px 18px; font-family: 'Times New Roman'; font-size: 40px;">I</p><hr>
