--- a/heredograma.html
+++ b/heredograma.html
@@ -312,7 +312,7 @@
                         <p style="    margin: 65px  2px; font-family: 'Times New Roman'; font-size: 40px;">III</p>
                     </div>
 
-					<div class="mesaTrabajo" id="div1"></div>
+					<div class="mesaTrabajo" id="div1"  style="border-radius: 10px;"></div>
                 </div>	
             </div>
         </div>
