--- a/Introduccion.html
+++ b/Introduccion.html
@@ -23,7 +23,18 @@
 </head>
 
 <body>
-
+    <div  class="portada" id="porta">
+        <img src="images/portada.jpg" class="port">
+        <br>
+        <button onclick="empezar()" class="port" style="
+        width: 150px;
+    ">¡EMPEZAR!</button>
+        <script>
+            function  empezar(){
+                document.getElementById("porta").remove();
+            }
+        </script>
+    </div>
     <div class="wrapper">
         <!-- Sidebar Holder -->
         <nav id="sidebar" style="
