--- a/simbologia.html
+++ b/simbologia.html
@@ -23,18 +23,6 @@
 </head>
 
 <body>
-    <div  class="portada" id="porta">
-        <img src="images/portada.jpg" class="port">
-        <br>
-        <button onclick="empezar()" class="port" style="
-        width: 150px;
-    ">¡EMPEZAR!</button>
-        <script>
-            function  empezar(){
-                document.getElementById("porta").remove();
-            }
-        </script>
-    </div>
     <div class="wrapper" style="z-index: 0;position:absolute; ">
         <!-- Sidebar Holder -->
         <nav id="sidebar" style="
@@ -172,7 +160,7 @@
                         <div class="abs-center">
                             <img src="images/enfermedadCY.png" class="pic">
                             <p></p>
-                            <p class="light">Enfermedad ligada al cromosoma X</p>
+                            <p class="light">Enfermedad ligada al cromosoma Y</p>
                         </div>
                     </div>
                     <div class="rela-inline tabla">
