--- a/heredograma.html
+++ b/heredograma.html
@@ -286,6 +286,8 @@
                                     </TR>
                                     <tr><TD><img src="images/lineaDoble.png"  
                                                 id="img24" onclick="Click(event)"> </TD>
+				        <TD><img src="images/lineaDiv.png"  
+                                           	id="img31" onclick="Click(event)"> </TD>
                                     </TR>
                                 </TABLE>
                                 <table style="margin-top: 20px;">
